# warmpath-agents

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
_support/: config.py  database.py
_support/models/: __init__.py
_support/utils/: encryption.py  exceptions.py
agents/: AGENTS.md  orchestrator.py
agents/architect/: AGENT.md  architect.py
agents/chief_of_staff/: COS.md  TEAM_ONBOARDING.md  budget_enforcer.py  cos_agent.py  cos_config.py  cos_learning.py  notion_sync.py  onboarder.py  org_evaluator.py  pod_manager.py  resolver.py  router.py  schemas.py  synthesizer.py  telegram_bridge.py  whatsapp_bridge.py
agents/deps_manager/: AGENT.md  deps_manager.py
agents/doc_keeper/: AGENT.md  doc_keeper.py
agents/hooks/: __init__.py  pipeline_next.py  session_log.py
agents/lead/: AGENT.md  lead.py
agents/memory/: __main__.py
agents/monitor/: monitor.py
agents/perf_monitor/: AGENT.md  perf_monitor.py
agents/privy/: AGENT.md  privy.py
agents/security/: AGENT.md  security.py
agents/shared/: action_handlers.py  api_client.py  business_outcomes.py  config.py  (+22 more)
data_team/: DATA_TEAM.md  orchestrator.py
examples/: README.md  cos-daily-brief.md  data-team-scan.md  engineering-scan.md  finance-team-scan.md  gtm-team-scan.md  ops-team-scan.md  product-team-scan.md
finance_team/: FINANCE_TEAM.md  orchestrator.py
gtm_team/: GTM_TEAM.md  orchestrator.py
mcp_server/: __init__.py  __main__.py  server.py
ops_team/: OPS_TEAM.md  orchestrator.py
product_team/: PRODUCT_TEAM.md  orchestrator.py
(+96 files in other folders)
