[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warmpath-agents"
version = "0.0.0"
description = "Archived: agent teams + Chief of Staff scaffolding extracted from WarmPath"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

# Only direct, top-level imports found in this repo's Python sources are
# listed here. Full production runs additionally require the WarmPath
# product repo (it provides `app.*`, which `_support/` and a handful of
# services import). See README for the clone-and-link steps.
dependencies = [
    "anthropic>=0.84.0",
    "cryptography>=42.0",
    "httpx>=0.28",
    "mcp>=1.26.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = [
    "agents*",
    "data_team*",
    "finance_team*",
    "gtm_team*",
    "mcp_server*",
    "ops_team*",
    "product_team*",
]
exclude = ["_support*", "examples*"]

[tool.ruff]
target-version = "py311"
extend-exclude = ["_support"]

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"agents/**/*.py" = ["C901"]
"data_team/**/*.py" = ["C901"]
"product_team/**/*.py" = ["C901"]
"ops_team/**/*.py" = ["C901"]
"gtm_team/**/*.py" = ["C901"]
"finance_team/**/*.py" = ["C901"]
